<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">My Tix</string>
    <string name="skip_introduction">Skip Introduction</string>
    <string name="next">Next</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_sub">Easier to know currently showing movie</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="pre_sale_sub">Don\'t worry about missing out latest movie updates</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_address">Email address</string>
    <string name="name">Name</string>
    <string name="back_button">Back Button</string>
    <string name="john_doe_gmail_com">johndoe@gmail.com</string>
    <string name="john_doe">John Doe</string>
    <string name="password_star">**********</string>
    <string name="john_doe_username">johndoe</string>
    <string name="photo">Photo</string>
    <string name="welcome">Welcome,</string>
    <string name="upload_later">Upload Later</string>
    <string name="save">Save</string>
    <string name="idr_280_000">IDR 280.000</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="home">Home</string>
    <string name="ticket">Ticket</string>
    <string name="profile">Profile</string>
    <string name="film_image">Film Image</string>
    <string name="avengers_infinity_war">Avengers: Infinity War</string>
    <string name="action_sci_fi_kids">Action, Sci-fi, Kids</string>
    <string name="storyboard">Storyboard</string>
    <string name="avengers_story_board">The Avengers must stop Thanos, a mad Titan, and his army from getting their hands on all the infinity stones. However, the mad Titan is prepared to go to any lengths to carry out his insane plan.</string>
    <string name="who_played">Who\'s Played</string>
    <string name="choose_seat">Choose Seat</string>
    <string name="screen">Screen</string>
    <string name="a">A</string>
    <string name="buy_ticket">Buy Ticket</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="booked">Booked</string>
    <string name="empty">Empty</string>
    <string name="selected">Selected</string>
    <string name="check_out">Check Out</string>
    <string name="when">When</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="cinema">Cinema</string>
    <string name="items">Items</string>
    <string name="seat_no_c1">Seat No. C1</string>
    <string name="seat_no_c2">Seat No. C2</string>
    <string name="grand_indonesia_cinema_4">Grand Indonesia, Cinema 4</string>
    <string name="buy_now">Buy Now</string>
    <string name="not_now">Not Now</string>
    <string name="idr_60_000">IDR 60.000</string>
    <string name="total_ticket">Total Ticket Price</string>
    <string name="idr_120_000">IDR 120.000</string>
    <string name="wallet">Wallet</string>
    <string name="total_balance">Total Balance</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="user_image">User Image</string>
    <string name="save_new_data">Save New Data</string>
    <string name="my_wallet">My Wallet</string>
    <string name="saldo_tersedia">Saldo Tersedia</string>
    <string name="daftar_transaksi">Daftar Transaksi</string>
    <string name="invisible_password">*****</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>